--- a/package.json
+++ b/package.json
@@ -6,16 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "electron-rebuild",
+    "deploy": "webpack --mode production",
     "start": "electron ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
     "electron": "^10.1.5",
-    "electron-rebuild": "^2.3.2"
+    "electron-rebuild": "^2.3.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "reactstrap": "^8.7.1",
     "serialport": "^9.0.2"
   }
 }
